k8s/manifests/service-with-keda/service-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-proxy
spec:
  externalName: keda-add-ons-http-interceptor-proxy.keda
  type: ExternalName
